<resources>
    <string name="app_name">The Bill Calculator</string>
    <string name="amount">Amount</string>
    <string name="num_of_pax">Num of Pax</string>
    <string name="no_svs">NO SVS</string>
    <string name="gst">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="name">Name</string>
</resources>