<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AmountHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount" />

        <EditText
            android:id="@+id/AmountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/NumOfPaxHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/num_of_pax" />

        <EditText
            android:id="@+id/NumOfPaxInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/SVS_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="NO SVS"
                android:textOn="SVS" />

            <ToggleButton
                android:id="@+id/GST_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ToggleButton"
                android:textOff="NO GST"
                android:textOn="GST" />

        </LinearLayout>

        <TextView
            android:id="@+id/DiscountHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount" />

        <EditText
            android:id="@+id/discountInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/PaymentOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/CashOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/PaynowOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/split" />

            <Button
                android:id="@+id/Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TotalBill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Total Bill: $" />

            <TextView
                android:id="@+id/EachPays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Each Pays:$" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>